<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <TextView
        android:id="@+id/tvClinic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/padding"
        android:text="@string/clinic"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvClinic"
        android:layout_below="@+id/tvClinic"
        android:padding="@dimen/padding"
        android:text="@string/address"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvClinic"
        android:layout_below="@+id/tvLocation"
        android:padding="@dimen/padding"
        android:text="@string/status"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvClinic"
        android:layout_below="@+id/tvStatus"
        android:padding="@dimen/padding"
        android:text="@string/website"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvClinic"
        android:layout_below="@+id/tvWebsite"
        android:padding="@dimen/padding"
        android:text="@string/phone_number"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/evClinic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvClinic"
        android:layout_centerHorizontal="true"
        android:text="@string/clinic"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/evLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLocation"
        android:layout_alignStart="@+id/evClinic"
        android:layout_centerHorizontal="true"
        android:text="@string/address"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/evStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvStatus"
        android:layout_alignStart="@+id/evClinic"
        android:layout_centerHorizontal="true"
        android:text="@string/status"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/evWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvWebsite"
        android:layout_alignStart="@+id/evClinic"
        android:layout_centerHorizontal="true"
        android:text="@string/website"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/evCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvCall"
        android:layout_alignStart="@+id/evClinic"
        android:layout_centerHorizontal="true"
        android:text="@string/phone_number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/add_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCall"
        android:layout_centerHorizontal="true"
        android:text="@string/add" />

</RelativeLayout>